test/functions/iterators/diten/zipCoforallIter.good
zipCoforallIter.chpl:1: In iterator 'f':
zipCoforallIter.chpl:2: error: invalid use of parallel construct in serial iterator
  zipCoforallIter.chpl:8: called as f(n: int(64))
